// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`create() compile: query-http 1`] = `"CREATE $bind__3 CONTENT $bind__4 RETURN DIFF VERSION $bind__5 TIMEOUT 1s"`;

exports[`create() compile: bindings-http 1`] = `
{
  "bind__3": Table {
    [Symbol(surrealdb.Table)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
  "bind__4": {
    "firstname": "Mary",
    "id": RecordId {
      [Symbol(surrealdb.RecordId)]: true,
      [Symbol(surrealdb.Value)]: true,
    },
    "lastname": "Doe",
  },
  "bind__5": DateTime {
    [Symbol(surrealdb.DateTime)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
}
`;

exports[`create() compile: query-ws 1`] = `"CREATE $bind__4 CONTENT $bind__5 RETURN DIFF VERSION $bind__6 TIMEOUT 1s"`;

exports[`create() compile: bindings-ws 1`] = `
{
  "bind__4": Table {
    [Symbol(surrealdb.Table)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
  "bind__5": {
    "firstname": "Mary",
    "id": RecordId {
      [Symbol(surrealdb.RecordId)]: true,
      [Symbol(surrealdb.Value)]: true,
    },
    "lastname": "Doe",
  },
  "bind__6": DateTime {
    [Symbol(surrealdb.DateTime)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
}
`;

exports[`create() compile: query-mem 1`] = `"CREATE $bind__3 CONTENT $bind__4 RETURN DIFF VERSION $bind__5 TIMEOUT 1s"`;

exports[`create() compile: bindings-mem 1`] = `
{
  "bind__3": Table {
    [Symbol(surrealdb.Table)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
  "bind__4": {
    "firstname": "Mary",
    "id": RecordId {
      [Symbol(surrealdb.RecordId)]: true,
      [Symbol(surrealdb.Value)]: true,
    },
    "lastname": "Doe",
  },
  "bind__5": DateTime {
    [Symbol(surrealdb.DateTime)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
}
`;
